# intentprotocol.org

./: .gitignore  CRITIQUE_ET_AMELIORATIONS.md  README.md  ROADMAP.md  THE INTERCHAIN OF INTENTIONS.md
agent-skill/: SKILL.md
poc/: crypto.js  demo.js  geo.js  package-lock.json  package.json  protocol.js  relay-server.js  relay.js
relay/: README.md  crypto.js  geo.js  index.js  package-lock.json  package.json  protocol.js  validation.js
sdk/js/: README.md  package-lock.json  package.json  test-e2e.js
sdk/js/examples/: business-agent.js  personal-agent.js
sdk/js/src/: agent.js  client.js  crypto.js  geo.js  index.cjs  index.js  protocol.js  sanitize.js  types.js
sdk/python/: README.md  pyproject.toml  test_e2e.py
sdk/python/examples/: business_agent.py  personal_agent.py
sdk/python/intentprotocol/: __init__.py  client.py  crypto.py  geo.py  protocol.py  sanitize.py  types.py
site/: index.html
spec/: SPEC_VS_POC.md
spec/v0.1/: EXAMPLES.md  IDENTITY.md  PROTOCOL.md  README.md  RELAY.md  SCHEMAS.md  SECURITY.md  SETTLEMENT.md
spec/v0.2/: CHANGES.md  DEVELOPMENT_ORDER.md  README.md
spec/v0.3/: CHANGES.md  README.md
